<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="imid">用户ID</string>
    <string name="modify_imid">修改用户ID</string>
    <string name="complete">完成</string>
    <string name="draft">[草稿]</string>
    <string name="video">视频</string>
    <string name="audio">音频</string>
    <string name="notify">通知</string>
    <string name="set_conversation_to_top">置顶聊天</string>
    <string name="user_a_me">[有人@我]</string>
    <string name="clean_conversation">清空会话</string>
    <string name="delete_conversation">删除会话</string>
    <string name="set_top">置顶</string>
    <string name="unset_top">取消置顶</string>
    <string name="confirm_clean_conversation">确认清空会话?</string>
    <string name="confirm_delete_conversation">确认删除会话?</string>
    <string name="message_notify">通知消息</string>
    <string name="voice_call" translatable="false">语音通话</string>
    <string name="video_call" translatable="false">视频通话</string>
    <string name="call_canceled" translatable="false">已取消通话</string>
    <string name="other_party_canceled" translatable="false">对方已取消</string>
    <string name="video_call_duration" translatable="false">视频通话时长</string>
    <string name="voice_call_duration" translatable="false">语音通话时长</string>
    <string name="unknown_status" translatable="false">未知状态</string>
    <string name="please_shoukuan">请收款</string>
    <string name="receive_shoukuan">已收款</string>
    <string name="card">名片</string>
    <string name="card_user">[个人名片]</string>
    <string name="card_group">[群组]</string>
    <string name="card_room">[聊天室]</string>
    <string name="card_channel">[频道]</string>
    <string name="card_litapp">[小程序]</string>
    <string name="text_user_card">个人名片</string>
    <string name="text_group_card">群组名片</string>
    <string name="text_room_card">聊天室名片</string>
    <string name="text_channel_card">频道名片</string>
    <string name="clear_day" translatable="false">天</string>
    <string name="new_friend">新的朋友</string>
    <string name="group_cheat">群聊</string>
    <string name="add_friend">加好友/群</string>
    <string name="no_recommend_friend">还没有推荐的朋友</string>
    <string name="user_no_found">该用户不存在</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="nickname_colon">昵称:%1$s</string>
    <string name="set_alias_and_tag">设置备注和标签</string>
    <string name="send_message">发消息</string>
    <string name="add_to_contact">添加到通讯录</string>
    <string name="change_my_name_tip">好名字可以让你的朋友 更容易记住你。</string>
    <string name="tag" translatable="false">标签</string>
    <string name="tag_selection" translatable="false">标签选择</string>
    <string name="please_enter_lable_name">请输入标签名</string>
    <string name="alias">备注名</string>
    <string name="alias_no_empty">备注名不能为空</string>
    <string name="postscript_tip">你需要发送验证申请，等对方通过</string>
    <string name="send">发送</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="file">文件</string>
    <string name="photo">照片</string>
    <string name="redPacket">红包</string>
    <string name="redPacket_group">拼手气红包</string>
    <string name="redPacket_bomb">扫雷红包</string>
    <string name="transfer" translatable="false">转账</string>
    <string name="please_input_transfer_amount" translatable="false">请输入转账金额</string>
    <string name="transfer_amount" translatable="false">转账金额 :</string>
    <string name="direction" translatable="false">向</string>
    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="input_speed_too_fast" translatable="false">输入速度过快</string>
    <string name="create_group_success">创建群成功</string>
    <string name="create_group_fail">创建群失败</string>
    <string name="no_group_now">暂无群聊</string>
    <string name="group_name">群聊名称</string>
    <string name="untitled">未命名</string>
    <string name="group_announcement">群公告</string>
    <string name="message_free">消息免打扰</string>
    <string name="update_redpacket">升级红包群</string>
    <string name="mutual_friends" translatable="false">允许互加好友</string>
    <string name="modify_groud_name" translatable="false">允许成员修改群名</string>
    <string name="modify_messages_copy" translatable="false">允许成员复制消息</string>
    <string name="modify_messages_forward" translatable="false">允许成员转发消息</string>
    <string name="my_nickname_in_this_group">我在本群的昵称</string>
    <string name="show_group_member_name">显示群成员昵称</string>
    <string name="clear_chat_log">清空聊天记录</string>
    <string name="delete_and_exit">删除并退出</string>
    <string name="chat_report">举报</string>
    <string name="delete_and_dismiss">解散并删除</string>
    <string name="add_member_success">添加群成员成功</string>
    <string name="add_member_fail">添加群成员失败</string>
    <string name="join_grouop_fail">加入群组失败</string>
    <string name="del_member_success">删除群成员成功</string>
    <string name="del_member_fail">删除群成员失败</string>
    <string name="search_for_friends" translatable="false">搜索</string>
    <string name="no_restrictions_entry" translatable="false">自由进群</string>
    <string name="join_group_type_verify" translatable="false">进群需要申请</string>
    <string name="join_group_type_password" translatable="false">输入密码进群</string>
    <string name="set_group_password" translatable="false">设置进群密码</string>
    <string name="group_members_people" translatable="false">群成员可以邀请</string>
    <string name="only_group_management_people" translatable="false">只能群管理邀请</string>
    <string name="no_validation" translatable="false">无验证</string>
    <string name="need_to_verify" translatable="false">需要验证</string>
    <string name="add_friends_title" translatable="false">添加好友</string>
    <string name="add_friends_verify1" translatable="false">允许所有人加好友</string>
    <string name="add_friends_verify2" translatable="false">添加好友需要验证</string>
    <string name="add_friends_verify3" translatable="false">不允许添加好友</string>
    <string name="allow_party_recall_message" translatable="false">允许对方撤回消息</string>
    <string name="allow_party_delete" translatable="false">允许对方删除消息</string>
    <string name="allow_stangers_send_message">允许陌生人发消息</string>
    <string name="need_reset" translatable="false">您还没有设置昵称或头像，点击确定前往设置</string>
    <string name="all_images">全部图片</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="preview_image_count">%1$d/%2$d</string>
    <string name="select_limit">最多选择%1$d张图片</string>
    <string name="select_complete">完成(%1$d/%2$d)</string>
    <string name="preview_count">预览(%1$d)</string>
    <string name="origin">原图</string>
    <string name="origin_size">原图(%1$s)</string>
    <string name="user_card">个人名片</string>
    <string name="litapp_card">web名片</string>
    <string name="clear_cache">清理缓存</string>
    <string name="more">更多</string>
    <string name="litapp_qrcode">小程序二维码</string>
    <string name="str_more">更多</string>
    <string name="my_qrcode">小程序二维码</string>
    <string name="picture_save_success">图片保存成功</string>
    <string name="picture_save_failure">图片保存失败</string>
    <string name="translating">翻译中</string>
    <string name="translated">已翻译</string>
    <string name="url_prefix">访问图片地址的前缀</string>
    <string name="error">您的操作存在异常，请关闭软件重新打开</string>
    <string name="text_null">编辑的动态有空，无法发布</string>
    <string name="ok">动态已成功发布</string>
    <string name="text">这一刻的想法...</string>
    <string name="dw_text">可选</string>
    <string name="rqsj_text">必填</string>
    <string name="input_empty">输入内容不能为空</string>
    <string name="submitting">"正在提交"</string>
    <string name="submit_wait">"正在提交，轻稍候。。。"</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_failure">提交失败</string>
    <string name="fav_friend">星标朋友</string>
    <string name="add_failure">添加失败</string>
    <string name="error_osnid">错误的OsnID</string>
    <string name="operation_failure">操作失败</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="user">用户</string>
    <string name="invite"> 邀请 </string>
    <string name="im">我是 </string>
    <string name="invite_group"> 邀请您加入群组</string>
    <string name="request_join"> 申请加入群组 </string>
    <string name="join_group"> 加入群组 </string>
    <string name="added">已添加</string>
    <string name="rejected">已拒绝</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>
    <string name="invite_sent">好友邀请已发送</string>
    <string name="add_friend_failure">添加好友失败</string>
    <string name="from_share">来自分享</string>
    <string name="test_share">分享测试</string>
    <string name="select_over">选人超限</string>
    <string name="empty_contact">没有联系人</string>
    <string name="no_contact">位联系人</string>
    <string name="get_conversation_info_error">获取会话信息失败</string>
    <string name="all_member_mute">全员禁言中</string>
    <string name="no_message">条消息</string>
    <string name="no_a_message">条@消息</string>
    <string name="welcome_join_room">欢迎 %s 加入聊天室</string>
    <string name="join_room_failure">加入聊天室失败</string>
    <string name="no_leave_room">%s 离开了聊天室</string>
    <string name="disable_talk">禁止群成员私聊</string>
    <string name="a_all">/@所有人 </string>
    <string name="all_user">所有人</string>
    <string name="inputting">对方正在输入</string>
    <string name="recording">对方正在录音</string>
    <string name="photographing">对方正在拍照</string>
    <string name="send_file">对方正在发送文件</string>
    <string name="send_location">对方正在发送位置</string>
    <string name="count_receive">已送达人数：</string>
    <string name="count_no_receive">未送达人数：</string>
    <string name="count_read">已读人数：</string>
    <string name="count_unread">未读人数：</string>
    <string name="receipt">消息回执</string>
    <string name="input_limit">最多允许输入</string>
    <string name="no_emoji">个表情符号</string>
    <string name="please_install">请安装</string>
    <string name="creating">创建中...</string>
    <string name="select_file_error">选择文件错误</string>
    <string name="cheat_record1">聊天记录</string>
    <string name="message_record">[聊天记录]: </string>
    <string name="step_forward">[逐条转发]共</string>
    <string name="forward_success">转发成功</string>
    <string name="forward_failure">转发失败</string>
    <string name="no_member_of_group">你不在群组或发生错误, 请稍后再试</string>
    <string name="please_input_nickname">请输入你的群昵称</string>
    <string name="administrator">管理员</string>
    <string name="set_sensitive_word" translatable="false">设置敏感词</string>
    <string name="set_mute">设置禁言</string>
    <string name="member_right">成员权限</string>
    <string name="no_limit_join">不限制加入</string>
    <string name="group_type">群组类型</string>
    <string name="join_mode">加群方式</string>
    <string name="verify_mode">验证方式</string>
    <string name="time_mode" translatable="false">发言速度</string>
    <string name="clear_time" translatable="false">定时清理群消息</string>
    <string name="no_allow_find">不允许查找</string>
    <string name="find_mode">查找方式</string>
    <string name="add_an_applet" translatable="false">添加小程序</string>
    <string name="black_list">黑名单</string>
    <string name="friend_circle">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="red_pecket_setting" translatable="false">扫雷红包概率设置</string>
    <string name="user_red_packet">专属红包</string>
    <string name="random_red_packet">拼手气红包</string>
    <string name="bomb_red_packet">扫雷红包</string>
    <string name="member_admin">成员管理</string>
    <string name="set_group_attrib">群属性设置</string>
    <string name="applet_management" tools:ignore="ExtraTranslation">小程序管理</string>
    <string name="addr_book">地址簿</string>
    <string name="create_group">发起群聊</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_friend1">添加好友</string>
    <string name="add_black_list">加入黑名单</string>
    <string name="del_black_list">移出黑名单</string>
    <string name="set_remark_name">设置备注名</string>
    <string name="set_fav_friend">设为星标好友</string>
    <string name="del_fav_friend">取消星标好友</string>
</resources>