<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addressBook"
        android:icon="@mipmap/icon_address_book_white"
        android:title="@string/addr_book"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/more"
        android:icon="@mipmap/ic_add"
        android:title="@string/more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/chat"
                android:icon="@mipmap/ic_create_group_cheat"
                android:orderInCategory="100"
                android:title="@string/create_group"
                app:iconTint="@color/colorPrimary"
                app:showAsAction="never" />

            <item
                android:id="@+id/add_contact"
                android:icon="@mipmap/ic_add"
                android:orderInCategory="101"
                android:title="@string/add_friend"
                app:iconTint="@color/colorPrimary" />
            <item
                android:id="@+id/scan_qrcode"
                android:icon="@mipmap/qr_code"
                android:orderInCategory="101"
                android:title="@string/scan"
                app:iconTint="@color/colorPrimary" />
        </menu>
    </item>

</menu>